--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -67,3 +67,10 @@ main {
 }
 
 /* style classes */
+
+.a_active {
+    color: white;
+    text-shadow: 1px .1px 0 black;
+    background-color: #0d6dfdb7;
+    border-radius: 5px;
+}
