--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,11 +1,16 @@
 body {
     background-color: #2c2c2cb7;
+    width: 100vw;
+    height: 100vh;
 }
 
 header {
+    width: 100vw;
     min-height: 100px;
     background-color: white;
     border-bottom: solid 2px white;
+    position: fixed;
+    z-index: 1;
 
     >.container-fluid {
         min-height: 70px;
@@ -64,6 +69,15 @@ header {
 
 main {
     background-color: #2c2c2c;
+    width: 100vw;
+    min-height: calc(100vh - 100px);
+    overflow-y: scroll;
+}
+
+div#index_container,
+div#country_container,
+div#contacts_container {
+    margin-top: 8rem;
 }
 
 /* index style */
@@ -101,7 +115,7 @@ hr#hr_devider {
     display: none;
 }
 
-@media screen and (max-width: 450px) {
+/* @media screen and (max-width: 450px) {
 
     #main_container {
         display: none;
@@ -115,7 +129,7 @@ hr#hr_devider {
     hr#hr_devider {
         display: block;
     }
-}
+} */
 
 /* country style */
 div#ticket_column {
