--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,7 +10,7 @@ header {
     background-color: white;
     border-bottom: solid 2px white;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
 
     >.container-fluid {
         min-height: 70px;
@@ -97,6 +97,13 @@ div#contacts_container {
 
 ::-webkit-scrollbar-thumb:hover {
     background: #7e7e7e;
+}
+
+
+.carousel-control-prev:hover,
+.carousel-control-next:hover {
+
+    background-color: rgba(128, 128, 128, 0.205);
 }
 
 /* #main_container {
